GORM and Swagger Implemented
