# src/app/authentication/models/sqlModel.go
@@ -1,10 +1,10 @@
 package models
 
 type DatabaseConfig struct {
-    // Driver   string `yaml:"driver"`
-    Host     string `yaml:"host"`
-    Port     string `yaml:"port"`
-    Username string `yaml:"username"`
-    Password string `yaml:"password"`
-    DBName   string `yaml:"dbname"`
+	// Driver   string `yaml:"driver"`
+	Host     string `yaml:"host"`
+	Port     string `yaml:"port"`
+	Username string `yaml:"username"`
+	Password string `yaml:"password"`
+	DBName   string `yaml:"dbname"`
 }
