# src/app/authentication/utils/validation.go
@@ -1,39 +1,38 @@
 package utils
 
 import (
-    "stock_broker_application/models"
-    "github.com/go-playground/validator/v10"
-    "stock_broker_application/constants"
+	"errors"
+	"github.com/go-playground/validator/v10"
+	"stock_broker_application/constants"
+	"stock_broker_application/models"
 )
 
-func ValidateSignUpRequest(req models.SignUpRequest) error {
-    // Create a new validator instance
-    validate := validator.New()
-    
-    // Validate the name field
-    if err := validate.Var(req.Name, "required,isAlpha"); err != nil {
-        return constants.ErrInvalidName
-    }
+var Validate *validator.Validate
 
-    // Validate the email field
-    if err := validate.Var(req.Email, "required,email"); err != nil {
-        return constants.ErrInvalidEmail
-    }
+func init() {
+	Validate = validator.New()
+}
 
-    // Validate the phone number field
-    if err := validate.Var(req.PhoneNumber, "required,len=10"); err != nil {
-        return constants.ErrInvalidPhoneNumber
-    }
-
-    // Validate the PAN card number field
-    if err := validate.Var(req.PancardNumber, "required,isAlphaNumeric"); err != nil {
-        return constants.ErrInvalidPancardNumber
-    }
-
-    // Validate the password field
-    if err := validate.Var(req.Password, "required"); err != nil {
-        return constants.ErrMissingPassword
-    }
-
-    return nil
+func ValidateCustomer(customer models.SignUpRequest) error {
+	err := Validate.Struct(customer)
+	if err != nil {
+		validationErrors, _ := err.(validator.ValidationErrors)
+		for _, fieldError := range validationErrors {
+			structFieldName := fieldError.Field()
+			switch structFieldName {
+			case "Name":
+				return errors.New(constants.ErrInvalidName.Error())
+			case "Email":
+				return errors.New(constants.ErrInvalidEmail.Error())
+			case "PhoneNumber":
+				return errors.New(constants.ErrInvalidPhoneNumber.Error())
+			case "PancardNumber":
+				return errors.New(constants.ErrInvalidPanCard.Error())
+			case "Password":
+				return errors.New(constants.ErrInvalidPassword.Error())
+			}
+		}
+		return err
+	}
+	return nil
 }
